--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -13,6 +13,7 @@
                         {{ form|crispy }}
                         <input type="submit" value="login" class="mt-2 btn btn-primary">
                     </form>
+                    <p>Don't Have An Account ..? <a class="btn btn-secondary-outline" href={% url 'signup' %}>Sign Up</a></p>
                 </div>
             </div>
         </div>
