--- a/templates/nav.html
+++ b/templates/nav.html
@@ -17,6 +17,24 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="{% url 'about' %}">About</a>
+          </li>
+          
+          {% if user.user_type != 'student' %}
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{% url 'departments' %}">Departments</a>
+            </li>
+            <!--<li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
+            </li>-->
+              
+          {% endif %}
+
+
           <!--<li class="nav-item">
             <a class="nav-link" href="#">Link</a>
           </li>
