--- a/templates/nav.html
+++ b/templates/nav.html
@@ -22,9 +22,13 @@
           </li>
           
           {% if user.user_type != 'student' %}
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="{% url 'departments' %}">Departments</a>
-            </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="{% url 'departments' %}">Departments</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Mark Attendance</a>
+          </li>
+          
             <!--<li class="nav-item">
               <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
             </li>
