--- a/templates/views.html
+++ b/templates/views.html
@@ -28,11 +28,8 @@
               class="w-6 h-6"
               viewBox="0 0 24 24"
             >
-              <circle cx="6" cy="6" r="3"></circle>
-              <circle cx="6" cy="18" r="3"></circle>
-              <path
-                d="M20 4L8.12 15.88M14.47 14.48L20 20M8.12 8.12L12 12"
-              ></path>
+              <path d="M20 21v-2a4 4 0 00-4-4H8a4 4 0 00-4 4v2"></path>
+              <circle cx="12" cy="7" r="4"></circle>
             </svg>
           </div>
           <h2 class="text-lg text-gray-900 font-medium title-font mb-2">
@@ -44,7 +41,7 @@
         </div>
       </div>
       {% endfor %}
-      <div class="xl:w-1/3 md:w-1/2 p-4">
+      <!--<div class="xl:w-1/3 md:w-1/2 p-4">
         <div class="border border-gray-200 p-6 rounded-lg">
           <div
             class="w-10 h-10 inline-flex items-center justify-center rounded-full bg-blue-100 text-blue-500 mb-4"
@@ -176,7 +173,7 @@
             farm.
           </p>
         </div>
-      </div>
+      </div>-->
     </div>
     
   </div>
