--- a/templates/nav.html
+++ b/templates/nav.html
@@ -21,7 +21,7 @@
             <a class="nav-link active" aria-current="page" href="{% url 'about' %}">About</a>
           </li>
           
-          {% if user.user_type != 'student' %}
+          {% if user.is_authenticated and user.user_type != 'student' %}
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="{% url 'departments' %}">Departments</a>
           </li>
