--- a/templates/nav.html
+++ b/templates/nav.html
@@ -26,7 +26,7 @@
             <a class="nav-link active" aria-current="page" href="{% url 'departments' %}">Departments</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Mark Attendance</a>
+            <a class="nav-link active" aria-current="page" href="{% url 'view_sections' %}">Mark Attendance</a>
           </li>
           
             <!--<li class="nav-item">
@@ -64,7 +64,7 @@
 							</a>
 							<ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="{% url 'password_change' %}">Change Password</a></li>
-                {% if user.user_type == 'admin' %}
+                {% if user.is_superuser or user.is_staff %}
                   <li><a class="dropdown-item" href="/admin">Admin panel</a></li>
                 {% endif %}
 								<!--<li><a href="{% url 'password_reset' %}" class="dropdown-item">Password Reset</a></li>-->
