--- a/templates/depts.html
+++ b/templates/depts.html
@@ -14,32 +14,34 @@
     </div>-->   
     <div class="flex flex-wrap -m-4">
       {% for department in departments %}
-      <div class="xl:w-1/3 md:w-1/2 p-4">
-        <div class="border border-gray-200 p-6 rounded-lg">
-          <div
-            class="w-10 h-10 inline-flex items-center justify-center rounded-full bg-blue-100 text-blue-500 mb-4"
-          >
-            <svg
-              fill="none"
-              stroke="currentColor"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              class="w-6 h-6"
-              viewBox="0 0 24 24"
+        <div class="xl:w-1/3 md:w-1/2 p-4">
+          <div class="border border-gray-200 p-6 rounded-lg">
+            <div
+              class="w-10 h-10 inline-flex items-center justify-center rounded-full bg-blue-100 text-blue-500 mb-4"
             >
-              <path d="M20 21v-2a4 4 0 00-4-4H8a4 4 0 00-4 4v2"></path>
-              <circle cx="12" cy="7" r="4"></circle>
-            </svg>
+              <a style="text-decoration:none" href="{% url 'department sections' department.short_name %}">
+              <svg
+                fill="none"
+                stroke="currentColor"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                class="w-6 h-6"
+                viewBox="0 0 24 24"
+              >
+                <path d="M20 21v-2a4 4 0 00-4-4H8a4 4 0 00-4 4v2"></path>
+                <circle cx="12" cy="7" r="4"></circle>
+              </svg>
+            </div>
+            <h2 class="text-lg text-gray-900 font-medium title-font mb-2">
+              {{ department.short_name }}
+            </h2></a>
+            <p class="leading-relaxed text-base">
+              {{ department.name }}
+            </p>
           </div>
-          <h2 class="text-lg text-gray-900 font-medium title-font mb-2">
-            {{ department.short_name }}
-          </h2>
-          <p class="leading-relaxed text-base">
-            {{ department.name }}
-          </p>
         </div>
-      </div>
+      </>
       {% endfor %}
       <!--<div class="xl:w-1/3 md:w-1/2 p-4">
         <div class="border border-gray-200 p-6 rounded-lg">
