--- a/templates/about.html
+++ b/templates/about.html
@@ -1,20 +1,21 @@
-{% extends 'base.html' %} {% block body %}
+{% extends 'base.html' %} 
+{% load static %}
+{% block body %}
 <section class="text-gray-600 body-font">
   <div class="container px-5 py-24 mx-auto">
     <div class="flex flex-col text-center w-full mb-20">
       <h1
         class="text-2xl font-medium title-font mb-4 text-gray-900 tracking-widest"
       >
-        OUR TEAM
+        OAM 
+
       </h1>
       <p class="lg:w-2/3 mx-auto leading-relaxed text-base">
-        Whatever cardigan tote bag tumblr hexagon brooklyn asymmetrical
-        gentrify, subway tile poke farm-to-table. Franzen you probably haven't
-        heard of them.
+        CMR COLLEGE OF ENGINEERING AND TECHNOLOGY 
       </p>
     </div>
     <div class="flex flex-wrap -m-4">
-      <div class="p-4 lg:w-1/2">
+      <!--<div class="p-4 lg:w-1/2">
         <div
           class="h-full flex sm:flex-row flex-col items-center sm:justify-start justify-center text-center sm:text-left"
         >
@@ -25,12 +26,13 @@
           />
           <div class="flex-grow sm:pl-8">
             <h2 class="title-font font-medium text-lg text-gray-900">
-              Holden Caulfield
+                Jahangeer Pasha
+
             </h2>
-            <h3 class="text-gray-500 mb-3">UI Developer</h3>
+            <h3 class="text-gray-500 mb-3">GUIDE OF PROJECT</h3>
             <p class="mb-4">
-              DIY tote bag drinking vinegar cronut adaptogen squid fanny pack
-              vaporware.
+                CMR COLLEGE OF ENGINEERING AND TECHNOLOGY. <br>
+                Assistant Professor.
             </p>
             <span class="inline-flex">
               <a class="text-gray-500">
@@ -81,26 +83,27 @@
             </span>
           </div>
         </div>
-      </div>
+      </div>-->
       <div class="p-4 lg:w-1/2">
         <div
           class="h-full flex sm:flex-row flex-col items-center sm:justify-start justify-center text-center sm:text-left"
         >
           <img
             alt="team"
-            class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4"
-            src="https://dummyimage.com/201x201"
+            class="flex-shrink-0 rounded-lg w-40 h-45 object-cover object-center sm:mb-0 mb-4"
+            src="{% static 'img/6683_sandeep.jpeg' %}"
           />
           <div class="flex-grow sm:pl-8">
             <h2 class="title-font font-medium text-lg text-gray-900">
-              Alper Kamu
+                Konda Sandeep​
+
             </h2>
-            <h3 class="text-gray-500 mb-3">Designer</h3>
+            <h3 class="text-gray-500 mb-3">20H51A6683</h3>
             <p class="mb-4">
-              DIY tote bag drinking vinegar cronut adaptogen squid fanny pack
-              vaporware.
+                CMR COLLEGE OF ENGINEERING AND TECHNOLOGY. <br>
+                BTECH 3rd YEAR CSE(ARTIFICAL INTELLIGENCE & MACHINE LEARNING).
             </p>
-            <span class="inline-flex">
+            <!--<span class="inline-flex">
               <a class="text-gray-500">
                 <svg
                   fill="none"
@@ -143,7 +146,7 @@
                 >
                   <path
                     d="M21 11.5a8.38 8.38 0 01-.9 3.8 8.5 8.5 0 01-7.6 4.7 8.38 8.38 0 01-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 01-.9-3.8 8.5 8.5 0 014.7-7.6 8.38 8.38 0 013.8-.9h.5a8.48 8.48 0 018 8v.5z"
-                  ></path>
+                  ></path>-->
                 </svg>
               </a>
             </span>
@@ -156,19 +159,19 @@
         >
           <img
             alt="team"
-            class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4"
-            src="https://dummyimage.com/204x204"
+            class="flex-shrink-0 rounded-lg w-40 h-45 object-cover object-center sm:mb-0 mb-4"
+            src="{% static 'img/6693_uday.jpeg' %}"
           />
           <div class="flex-grow sm:pl-8">
             <h2 class="title-font font-medium text-lg text-gray-900">
-              Atticus Finch
+                 Venkaiahgari Uday Kiran Reddy
             </h2>
-            <h3 class="text-gray-500 mb-3">UI Developer</h3>
+            <h3 class="text-gray-500 mb-3">20H51A6693</h3>
             <p class="mb-4">
-              DIY tote bag drinking vinegar cronut adaptogen squid fanny pack
-              vaporware.
+                CMR COLLEGE OF ENGINEERING AND TECHNOLOGY. <br>
+                BTECH 3rd YEAR CSE(ARTIFICAL INTELLIGENCE & MACHINE LEARNING).
             </p>
-            <span class="inline-flex">
+            <!--<span class="inline-flex">
               <a class="text-gray-500">
                 <svg
                   fill="none"
@@ -211,7 +214,7 @@
                 >
                   <path
                     d="M21 11.5a8.38 8.38 0 01-.9 3.8 8.5 8.5 0 01-7.6 4.7 8.38 8.38 0 01-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 01-.9-3.8 8.5 8.5 0 014.7-7.6 8.38 8.38 0 013.8-.9h.5a8.48 8.48 0 018 8v.5z"
-                  ></path>
+                  ></path>-->
                 </svg>
               </a>
             </span>
@@ -224,19 +227,19 @@
         >
           <img
             alt="team"
-            class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4"
-            src="https://dummyimage.com/206x206"
+            class="flex-shrink-0 rounded-lg w-40 h-45 object-cover object-center sm:mb-0 mb-4"
+            src="{% static 'static/img/6631_laxmi_narayana.jpeg' %}"
           />
           <div class="flex-grow sm:pl-8">
             <h2 class="title-font font-medium text-lg text-gray-900">
-              Henry Letham
+                Davu Raja Laxmi Narayana
             </h2>
-            <h3 class="text-gray-500 mb-3">Designer</h3>
+            <h3 class="text-gray-500 mb-3">20H51A6631</h3>
             <p class="mb-4">
-              DIY tote bag drinking vinegar cronut adaptogen squid fanny pack
-              vaporware.
+                CMR COLLEGE OF ENGINEERING AND TECHNOLOGY. <br>
+                BTECH 3rd YEAR CSE(ARTIFICAL INTELLIGENCE & MACHINE LEARNING).
             </p>
-            <span class="inline-flex">
+            <!--<span class="inline-flex">
               <a class="text-gray-500">
                 <svg
                   fill="none"
@@ -279,7 +282,7 @@
                 >
                   <path
                     d="M21 11.5a8.38 8.38 0 01-.9 3.8 8.5 8.5 0 01-7.6 4.7 8.38 8.38 0 01-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 01-.9-3.8 8.5 8.5 0 014.7-7.6 8.38 8.38 0 013.8-.9h.5a8.48 8.48 0 018 8v.5z"
-                  ></path>
+                  ></path>-->
                 </svg>
               </a>
             </span>
