--- a/templates/about.html
+++ b/templates/about.html
@@ -2,10 +2,10 @@
 {% load static %}
 {% block body %}
 <section class="text-gray-600 body-font">
-  <div class="container px-5 py-24 mx-auto">
+  <div class="container px-5 py-2 mx-auto">
     <div class="flex flex-col text-center w-full mb-20">
       <h1
-        class="text-2xl font-medium title-font mb-4 text-gray-900 tracking-widest"
+        class="text-2xl font-medium title-font mb-2 text-gray-900 tracking-widest"
       >
         OAM 
 
@@ -91,7 +91,7 @@
           <img
             alt="team"
             class="flex-shrink-0 rounded-lg w-40 h-45 object-cover object-center sm:mb-0 mb-4"
-            src="{% static 'img/6683_sandeep.jpeg' %}"
+            src="{% static '/img/6683_sandeep.jpg' %}"
           />
           <div class="flex-grow sm:pl-8">
             <h2 class="title-font font-medium text-lg text-gray-900">
@@ -160,7 +160,7 @@
           <img
             alt="team"
             class="flex-shrink-0 rounded-lg w-40 h-45 object-cover object-center sm:mb-0 mb-4"
-            src="{% static 'img/6693_uday.jpeg' %}"
+            src="{% static '/img/6693_uday.jpg' %}"
           />
           <div class="flex-grow sm:pl-8">
             <h2 class="title-font font-medium text-lg text-gray-900">
@@ -228,7 +228,7 @@
           <img
             alt="team"
             class="flex-shrink-0 rounded-lg w-40 h-45 object-cover object-center sm:mb-0 mb-4"
-            src="{% static 'static/img/6631_laxmi_narayana.jpeg' %}"
+            src="{% static '/img/6631_laxmi_narayana.jpg' %}"
           />
           <div class="flex-grow sm:pl-8">
             <h2 class="title-font font-medium text-lg text-gray-900">
