--- a/templates/show_periods.html
+++ b/templates/show_periods.html
@@ -10,6 +10,12 @@
         >
             Mark Attendance
         </a>
+        <a 
+            href="/show_report/{{ section }}"
+            class="btn btn-secondary"
+        >
+            Show Report 
+        </a>
         <div class="flex flex-col">
             
             <table class="min-w-full border text-center table table-hover table-bordered">
