--- a/templates/student_details.html
+++ b/templates/student_details.html
@@ -5,10 +5,10 @@
 <div class="row justify-content-center">
     <div class="col-7">
         <a 
-            href="/mark_attendance/{{ section }}/new" 
+            href="/show_myreport/{{ section }}/" 
             class="btn btn-primary"
         >
-            My Periods
+            My Report
         </a>
         <div class="flex flex-col">
             
