--- a/templates/choose_list.html
+++ b/templates/choose_list.html
@@ -9,7 +9,7 @@
             <li>
                 <a 
                     class="btn btn-outline-primary text-success" 
-                    href="/show_attendance/{{ section }}"
+                    href="{% url 'show attendance' section %}"
                 >
                     {{ section }} 
                 </a>
