--- a/templates/percentage.html
+++ b/templates/percentage.html
@@ -53,7 +53,7 @@
      // implantation happens here
 
         var canvas = document.getElementById('myCanvas');
-        var percentage = 70;
+        var percentage = {{ percentage }};
         var radius;
         if (myCanvas.height < myCanvas.width) {
             radius = myCanvas.height / 3;
