--- a/templates/show_periods.html
+++ b/templates/show_periods.html
@@ -11,7 +11,7 @@
             Mark Attendance
         </a>
         <a 
-            href="/show_report/{{ section }}"
+            href="{% url 'show report' section %}"
             class="btn btn-secondary"
         >
             Show Report 
