--- a/templates/show_periods.html
+++ b/templates/show_periods.html
@@ -5,7 +5,7 @@
 <div class="row justify-content-center">
     <div class="col-10">
         <a 
-            href="/mark_attendance/{{ section }}/new" 
+            href="/mark_attendance/{{ section }}/new/" 
             class="btn btn-primary"
         >
             Mark Attendance
@@ -53,7 +53,7 @@
                             </td>
                             <td>
                                 <a 
-                                    href="/update_attendance/{{ section }}/{{ id }}"
+                                    href="/update_attendance/{{ section }}/{{ id }}/"
                                     class = "btn btn-primary"
                                 >
                                     Update 
